# surveyor

./: .gitmodules  LICENSE  README.org  cabal.project.dist  surveyor.cabal
.github/workflows/: ci-matrix.yml
crux-dbg/: CHANGELOG.md  crux-dbg.cabal
crux-dbg/include/: crucible.h
crux-dbg/platform/posix/Crux/Debug/: Interrupt.hs
crux-dbg/platform/windows/Crux/Debug/: Interrupt.hs
crux-dbg/src/Crux/Debug/: Config.hs  LLVM.hs  Solver.hs
crux-dbg/src/Crux/Debug/LLVM/: Overrides.hs
crux-dbg/tools/crux-dbg/: Main.hs
doc/: Design.org
examples/: Makefile  assertion.bc  assertion.c  crc_break.bc  crc_break.c  debug_assertion.bc  loop.bc  loop.c  test.bc  test.c
src/: Surveyor.hs
src/Brick/: Command.hs  Keymap.hs
src/Brick/Widget/: Minibuffer.hs
src/Surveyor/: Architecture.hs  Arguments.hs  Attributes.hs  BinaryAnalysisResult.hs  BlockSelector.hs  BlockViewer.hs  Commands.hs  EchoArea.hs  Events.hs  Handlers.hs  Keymap.hs  Loader.hs  Minibuffer.hs  Mode.hs  Names.hs  State.hs
src/Surveyor/Architecture/: Class.hs  JVM.hs  LLVM.hs  MC.hs
src/Surveyor/Loader/: PPCConfig.hs  RenovateAnalysis.hs
src/Surveyor/Widget/: BlockSelector.hs  BlockViewer.hs  EchoArea.hs  FunctionSelector.hs  FunctionViewer.hs  Minibuffer.hs
surveyor-brick/: surveyor-brick.cabal
surveyor-brick/src/: Surveyor.hs
surveyor-brick/src/Brick/Match/: Subword.hs
surveyor-brick/src/Brick/Widget/: FilterList.hs  Graph.hs  Minibuffer.hs
surveyor-brick/src/Surveyor/: Brick.hs  Handlers.hs  State.hs
surveyor-brick/src/Surveyor/Brick/: Attributes.hs  Command.hs  EchoArea.hs  Extension.hs  Handlers.hs  Keymap.hs  Names.hs  Panic.hs  State.hs
surveyor-brick/src/Surveyor/Brick/Handlers/: Context.hs  Extension.hs  Info.hs  Load.hs  Logging.hs  SymbolicExecution.hs
surveyor-brick/src/Surveyor/Brick/Widget/: BlockSelector.hs  BlockViewer.hs  CallStackViewer.hs  FunctionSelector.hs  FunctionViewer.hs  InstructionSemanticsViewer.hs  Minibuffer.hs  ModelViewer.hs  SymbolicExecution.hs  ValueSelector.hs  ValueViewer.hs
surveyor-brick/src/Surveyor/Brick/Widget/SymbolicExecution/: Configuration.hs  Inspect.hs  Monitor.hs  Setup.hs  StateExplorer.hs
surveyor-brick/src/Surveyor/Widget/: BlockSelector.hs  BlockViewer.hs  FunctionSelector.hs  FunctionViewer.hs  Minibuffer.hs
surveyor-brick/tools/surveyor/: Main.hs
surveyor-core/: ChangeLog.md  surveyor-core.cabal
surveyor-core/src/Control/: NF.hs  Once.hs
surveyor-core/src/Surveyor/: Architecture.hs  Arguments.hs  BinaryAnalysisResult.hs  Chan.hs  Commands.hs  Core.hs  EchoArea.hs  Events.hs  Keymap.hs  Loader.hs  Mode.hs
surveyor-core/src/Surveyor/Architecture/: Class.hs  JVM.hs  LLVM.hs  MC.hs
surveyor-core/src/Surveyor/Core/: Architecture.hs  Arguments.hs  Async.hs  BinaryAnalysisResult.hs  Breakpoint.hs  Chan.hs  Command.hs  Commands.hs  Context.hs  EchoArea.hs  Events.hs  ExprMap.hs  GraphViz.hs  HandlerMonad.hs  IRRepr.hs  Keymap.hs  Loader.hs  Logging.hs  Mode.hs  OperandList.hs  Panic.hs  State.hs  SymbolicExecution.hs  TranslationCache.hs  ValueNames.hs
surveyor-core/src/Surveyor/Core/Architecture/: Class.hs  Crucible.hs  JVM.hs  LLVM.hs  MC.hs  Macaw.hs  NonceCache.hs  Void.hs
surveyor-core/src/Surveyor/Core/Context/: SymbolicExecution.hs
surveyor-core/src/Surveyor/Core/Context/SymbolicExecution/: Config.hs  Session.hs  State.hs
surveyor-core/src/Surveyor/Core/Handlers/: Context.hs  Debugging.hs  Info.hs  Logging.hs  SymbolicExecution.hs
surveyor-core/src/Surveyor/Core/Loader/: PPCConfig.hs  RenovateAnalysis.hs
surveyor-core/src/Surveyor/Core/Logging/: Message.hs
surveyor-core/src/Surveyor/Core/SymbolicExecution/: Config.hs  DebugMonitor.hs  ExecutionFeature.hs  Override.hs  Session.hs  Simulation.hs  State.hs
surveyor-core/src/Surveyor/Loader/: PPCConfig.hs  RenovateAnalysis.hs
surveyor-core/src/Surveyor/Widget/: EchoArea.hs
surveyor-qml/: ChangeLog.md  main.qml  surveyor-qml.cabal
surveyor-qml/src/Surveyor/: QML.hs
surveyor-qml/tools/surveyor-qml/: Main.hs
tools/surveyor/: Main.hs
