name:                surveyor
version:             0.1.0.0
synopsis:            An interactive binary explorer
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Reverse-Engineering
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Surveyor
                       Surveyor.Architecture
                       Surveyor.Attributes
                       Surveyor.BinaryAnalysisResult
                       Surveyor.Commands
                       Surveyor.EchoArea
                       Surveyor.Events
                       Surveyor.Handlers
                       Surveyor.Loader
                       Surveyor.Minibuffer
                       Surveyor.Mode
                       Surveyor.State
                       Brick.Command
                       Brick.Keymap
                       Brick.Match.Subword
                       Brick.Widget.FilterList
                       Brick.Widget.Minibuffer
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       containers,
                       async,
                       bytestring,
                       text,
                       vector,
                       prettyprinter,
                       lens >= 4.15 && < 5,
                       parameterized-utils >= 1 && < 2,
                       text-zipper,
                       megaparsec >= 6 && < 7,
                       IntervalMap >= 0.5 && < 0.6,
                       regex >= 1 && < 2,
                       brick >= 0.30 && < 1,
                       vty,
                       elf-edit,
                       macaw-base,
                       renovate,
                       renovate-ppc,
                       renovate-x86,
                       flexdis86,
                       dismantle-ppc
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable surveyor
  default-language: Haskell2010
  hs-source-dirs: tools/surveyor
  main-is: Main.hs
  ghc-options: -Wall -rtsopts -threaded
  build-depends: surveyor,
                 base,
                 optparse-applicative