name:                surveyor
version:             0.1.0.0
synopsis:            An interactive binary explorer
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Reverse-Engineering
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Surveyor
                       Surveyor.Architecture
                       Surveyor.Architecture.Class
                       Surveyor.Architecture.LLVM
                       Surveyor.Architecture.MC
                       Surveyor.Arguments
                       Surveyor.Attributes
                       Surveyor.BinaryAnalysisResult
                       Surveyor.Commands
                       Surveyor.Events
                       Surveyor.Handlers
                       Surveyor.Keymap
                       Surveyor.Loader
                       Surveyor.Loader.PPCConfig
                       Surveyor.Loader.RenovateAnalysis
                       Surveyor.Mode
                       Surveyor.Names
                       Surveyor.State
                       Surveyor.Widget.BlockSelector
                       Surveyor.Widget.BlockViewer
                       Surveyor.Widget.EchoArea
                       Surveyor.Widget.FunctionSelector
                       Surveyor.Widget.FunctionViewer
                       Surveyor.Widget.Minibuffer
                       Brick.Command
                       Brick.Keymap
                       Brick.Match.Subword
                       Brick.Widget.FilterList
                       Brick.Widget.Minibuffer
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       containers,
                       async,
                       bytestring,
                       text,
                       vector,
                       filepath,
                       prettyprinter,
                       pretty,
                       lens >= 4.15 && < 5,
                       generic-lens >= 0.5.1.0 && < 0.6,
                       parameterized-utils >= 1 && < 2,
                       text-zipper,
                       megaparsec >= 6 && < 7,
                       IntervalMap >= 0.5 && < 0.6,
                       regex >= 1 && < 2,
                       brick >= 0.30 && < 1,
                       vty,
                       elf-edit,
                       llvm-pretty >= 0.7 && < 0.8,
                       llvm-pretty-bc-parser,
                       macaw-base,
                       renovate,
                       renovate-ppc,
                       renovate-x86,
                       flexdis86,
                       macaw-ppc,
                       semmc,
                       semmc-ppc,
                       dismantle-tablegen,
                       dismantle-ppc,
                       crucible
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable surveyor
  default-language: Haskell2010
  hs-source-dirs: tools/surveyor
  main-is: Main.hs
  ghc-options: -Wall -rtsopts -threaded "-with-rtsopts=-I0"
  build-depends: surveyor,
                 base,
                 optparse-applicative