name:                surveyor-brick
version:             0.1.0.0
synopsis:            An interactive binary explorer
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Reverse-Engineering
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Surveyor.Brick
                       Surveyor.Brick.Attributes
                       Surveyor.Brick.Handlers
                       Surveyor.Brick.Names
                       Surveyor.Brick.Widget.BlockSelector
                       Surveyor.Brick.Widget.BlockViewer
                       Surveyor.Brick.Widget.FunctionSelector
                       Surveyor.Brick.Widget.FunctionViewer
                       Surveyor.Brick.Widget.Minibuffer
                       Surveyor.Brick.Widget.InstructionSemanticsViewer
                       Brick.Match.Subword
                       Brick.Widget.FilterList
                       Brick.Widget.Graph
                       Brick.Widget.Minibuffer
  other-modules:       Surveyor.Brick.Command
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       deepseq,
                       containers,
                       async,
                       bytestring,
                       text,
                       vector,
                       filepath,
                       Glob >= 0.10 && < 0.11,
                       prettyprinter,
                       pretty,
                       fmt,
                       split >= 0.2 && < 0.3,
                       lens >= 4.15 && < 5,
                       generic-lens >= 0.5.1.0 && < 1.3,
                       parameterized-utils >= 1 && < 3,
                       text-zipper,
                       megaparsec >= 7 && < 8,
                       IntervalMap >= 0.6 && < 0.7,
                       regex-tdfa >= 1 && < 2,
                       brick >= 0.47 && < 1,
                       vty,
                       haggle,
                       surveyor-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Wcompat

executable surveyor-brick
  default-language: Haskell2010
  hs-source-dirs: tools/surveyor
  main-is: Main.hs
  ghc-options: -Wall -Wcompat -rtsopts -threaded "-with-rtsopts=-I0"
  build-depends: surveyor-brick,
                 base,
                 optparse-applicative
