name:                surveyor-core
version:             0.1.0.0
synopsis:            An interactive binary explorer (core library)
description:         This includes core functionality reused among several UIs
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Reverse-Engineering
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Surveyor.Architecture
                       Surveyor.Arguments
                       Surveyor.Chan
                       Surveyor.Commands
                       Surveyor.Events
                       Surveyor.Keymap
                       Surveyor.Loader
                       Surveyor.Mode
                       Surveyor.Core.Command
                       Surveyor.Core.Keymap
                       Surveyor.Core.State
                       Surveyor.EchoArea
  other-modules:       Surveyor.Architecture.Class
                       Surveyor.Architecture.JVM
                       Surveyor.Architecture.LLVM
                       Surveyor.Architecture.MC
                       Surveyor.BinaryAnalysisResult
                       Surveyor.Loader.PPCConfig
                       Surveyor.Loader.RenovateAnalysis
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       containers,
                       async,
                       bytestring,
                       text,
                       vector,
                       filepath,
                       prettyprinter,
                       pretty,
                       split >= 0.2 && < 0.3,
                       lens >= 4.15 && < 5,
                       generic-lens >= 0.5.1.0 && < 0.6,
                       parameterized-utils >= 1 && < 2,
                       text-zipper,
                       megaparsec >= 6 && < 7,
                       IntervalMap >= 0.5 && < 0.6,
                       regex >= 1 && < 2,
                       vty,
                       elf-edit,
                       jvm-parser,
                       llvm-pretty >= 0.7 && < 0.8,
                       llvm-pretty-bc-parser,
                       macaw-base,
                       renovate,
                       renovate-ppc,
                       renovate-x86,
                       binary-symbols,
                       flexdis86,
                       macaw-ppc,
                       macaw-semmc,
                       semmc,
                       semmc-ppc,
                       dismantle-tablegen,
                       dismantle-ppc,
                       what4,
                       crucible
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
