name:                surveyor-core
version:             0.1.0.0
synopsis:            An interactive binary explorer (core library)
description:         This includes core functionality reused among several UIs
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:           
category:            Reverse-Engineering
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.NF
                       Control.Once
                       Surveyor.Core
  other-modules:       Surveyor.Core.Architecture
                       Surveyor.Core.Architecture.Class
                       Surveyor.Core.Architecture.Crucible
                       Surveyor.Core.Architecture.JVM
                       Surveyor.Core.Architecture.LLVM
                       Surveyor.Core.Architecture.Macaw
                       Surveyor.Core.Architecture.MC
                       Surveyor.Core.Architecture.Void
                       Surveyor.Core.Arguments
                       Surveyor.Core.Async
                       Surveyor.Core.BinaryAnalysisResult
                       Surveyor.Core.Chan
                       Surveyor.Core.Command
                       Surveyor.Core.Commands
                       Surveyor.Core.Context
                       Surveyor.Core.EchoArea
                       Surveyor.Core.Events
                       Surveyor.Core.IRRepr
                       Surveyor.Core.Keymap
                       Surveyor.Core.Loader
                       Surveyor.Core.Loader.PPCConfig
                       Surveyor.Core.Loader.RenovateAnalysis
                       Surveyor.Core.Mode
                       Surveyor.Core.State
                       Surveyor.Core.TranslationCache
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       deepseq,
                       containers,
                       async,
                       exceptions,
                       bytestring,
                       text,
                       fmt >= 0.6 && < 0.7,
                       vector,
                       filepath,
                       prettyprinter,
                       pretty,
                       ansi-wl-pprint,
                       split >= 0.2 && < 0.3,
                       lens >= 4.15 && < 5,
                       generic-lens >= 0.5.1.0 && < 1.3,
                       parameterized-utils >= 1 && < 3,
                       text-zipper,
                       megaparsec >= 7 && < 8,
                       IntervalMap >= 0.6 && < 0.7,
                       regex-tdfa >= 1 && < 2,
                       vty,
                       elf-edit,
                       haggle,
                       jvm-parser,
                       llvm-pretty >= 0.10 && < 0.11,
                       llvm-pretty-bc-parser,
                       crucible-llvm,
                       macaw-base,
                       macaw-loader,
                       macaw-loader-ppc,
                       macaw-loader-x86,
                       macaw-symbolic,
                       macaw-x86-symbolic,
                       macaw-ppc-symbolic,
                       renovate,
                       renovate-ppc,
                       renovate-x86,
                       binary-symbols,
                       flexdis86,
                       macaw-ppc,
                       macaw-semmc,
                       semmc,
                       semmc-ppc,
                       dismantle-tablegen,
                       dismantle-ppc,
                       what4,
                       crucible
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
